--- a/views/public/html/birthday.html
+++ b/views/public/html/birthday.html
@@ -675,7 +675,7 @@
                   error.style.display = 'none';
                   tableContainer.style.display = 'none';
       
-                  axios.get('http://localhost:4000/candidate/birthday', {
+                  axios.get('https://nemonode.ivistaz.co//candidate/birthday', {
                       params: { date },
                       headers: { "Authorization": token }
                   })
