Changes done git2

--- a/views/public/html/report.html
+++ b/views/public/html/report.html
@@ -279,7 +279,7 @@
   
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-  <script>
+  <!-- <script>
       document.addEventListener('DOMContentLoaded', function () {
           const selectedFields = {
               candidateId: false,
@@ -412,8 +412,9 @@
               checkbox.addEventListener('change', handleCheckboxChange);
           });
       });
-  </script>
-  
+  </script> -->
+
+
    
 
     <!-- Core JS -->
@@ -430,8 +431,7 @@
 
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src="report.js"></script>
-
+    <script src="./report.js"></script>
     <!-- Page JS -->
 
     <!-- Place this tag in your head or just before your close body tag. -->
