Changes done git 9

--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1510,22 +1510,16 @@
                                                         <tr>
                                                             <th  style="font-size: 8px;">Bank Name</th>
                                                             <th  style="font-size: 8px;">Account Number</th>
+                                                            <th  style="font-size: 8px;">Bank</th>
+                                                            <th  style="font-size: 8px;">Branch</th>
                                                             <th  style="font-size: 8px;">Bank Address</th>
-                                                            <th  style="font-size: 8px;">IFSC Code</th>
-                                                            <th  style="font-size: 8px;">Swift Code</th>
-                                                            <th  style="font-size: 8px;">Beneficiary</th>
                                                             <th  style="font-size: 8px;">Beneficiary Address</th>
-                                                            <th  style="font-size: 8px;">PAN Number</th>
-                                                            <th style="font-size: 8px;">Passbook</th>
-                                                            <th  style="font-size: 8px;">PAN Card</th>
-                                                            <th  style="font-size: 8px;">NRI Bank Name</th>
-                                                            <th  style="font-size: 8px;">NRI Account Number</th>
-                                                            <th  style="font-size: 8px;">NRI Bank Address</th>
-                                                            <th  style="font-size: 8px;">NRI IFSC Code</th>
-                                                            <th  style="font-size: 8px;">NRI Swift Code</th>
-                                                            <th  style="font-size: 8px;">NRI Beneficiary</th>
-                                                            <th  style="font-size: 8px;">NRI Beneficiary Address</th>
-                                                            <th  style="font-size: 8px;">NRI Passbook</th>
+                                                            <th  style="font-size: 8px;">Swift Code</th>
+                                                            <th style="font-size: 8px;">IFSC Code</th>
+                                                            <th  style="font-size: 8px;">Passbook</th>
+                                                            <th  style="font-size: 8px;">pan_num</th>
+                                                            <th  style="font-size: 8px;">pan_num</th>
+                                                            <th  style="font-size: 8px;">pan_card</th>
                                                             <th  style="font-size: 8px;">Actions</th>
                                                         </tr>
                                                     </thead>
