Changes done git 18

--- a/views/public/html/edit-candidate.html
+++ b/views/public/html/edit-candidate.html
@@ -620,8 +620,9 @@
                         <button id="next-page-btn" onclick="nextPage()">Next</button>
                     </div>
                                 
-                    <input type="text" id="candidate-id-input" placeholder="Enter Candidate ID">
-                    <button onclick="jumpToCandidate()">Jump to Candidate</button>
+                    <input type="number" id="page-number-input" placeholder="Enter Page Number">
+                    <button onclick="jumpToPage()">Jump to Page</button>
+                    
                 
                         <div class="table-responsive text-center">
                             <table id="candidate-list" class="table table-sm table-striped table-bordered " style="font-size: 12px;">
