Changes done git 26

--- a/views/public/html/edit-candidate-2.html
+++ b/views/public/html/edit-candidate-2.html
@@ -715,7 +715,7 @@
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-floating">
-                              <select id="edit_candidate_c_rank" class="form-select" required>
+                              <select id="edit_candidate_c_rank" class="form-select" >
                                   <option value="" disabled selected>-- Select Rank --</option>
                                   <!-- Options will be dynamically added using JavaScript -->
                               </select>
@@ -730,7 +730,7 @@
                                         id="edit_candidate_avb_date"
                                         placeholder="Availability"
                                         aria-describedby="availabilityHelp"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_avb_date">Availability</label>
                                 </div>
@@ -743,7 +743,7 @@
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-floating">
-                                <select id="edit_candidate_nationality" class="form-select" required>
+                                <select id="edit_candidate_nationality" class="form-select" >
                                     <option value="" disabled selected>-- Select Nationality --</option>
                                     <!-- Options will be dynamically added using JavaScript -->
                                 </select>
@@ -757,7 +757,7 @@
                                         class="form-select"
                                         id="edit_company_status"
                                         aria-describedby="maritalStatusHelp"
-                                        required
+                                        
                                     >
                                         <option value="" disabled selected>Select Marital Status</option>
                                         <option value="Single">Single</option>
@@ -783,7 +783,7 @@
                                         id="edit_candidate_dob"
                                         placeholder="Date of Birth"
                                         aria-describedby="dateOfBirthHelp"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_dob">Date of Birth</label>
                                 </div>
@@ -796,7 +796,7 @@
                                         id="edit_candidate_birth_place"
                                         placeholder="Birth Place"
                                         aria-describedby="birthPlaceHelp"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_birth_place">Birth Place</label>
                                 </div>
@@ -813,7 +813,7 @@
                                         class="form-select"
                                         id="edit_candidate_work_nautilus"
                                         aria-describedby="workedWithUsHelp"
-                                        required
+                                        
                                     >
                                         <option value="" disabled selected>Select Option</option>
                                         <option value="yes">Yes</option>
@@ -826,7 +826,7 @@
     
                             <div class="col-md-6">
                               <div class="form-floating">
-                                  <select id="edit_candidate_c_vessel" class="form-select" required>
+                                  <select id="edit_candidate_c_vessel" class="form-select" >
                                       <option value="" disabled selected>-- Select Vessel Type --</option>
                                       <!-- Options will be dynamically added using JavaScript -->
                                   </select>
@@ -841,7 +841,7 @@
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-floating">
-                                <select id="edit_candidate_experience" class="form-select" required>
+                                <select id="edit_candidate_experience" class="form-select" >
                                     <option value="" disabled selected>-- Select Experience --</option>
                                     <!-- Options will be dynamically added using JavaScript -->
                                 </select>
@@ -856,7 +856,7 @@
                                         class="form-select"
                                         id="edit_candidate_zone"
                                         aria-describedby="zoneHelp"
-                                        required
+                                        
                                     >
                                         <option value="" disabled selected>Select Zone</option>
                                         <option value="East">East</option>
@@ -874,7 +874,7 @@
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-floating">
-                                <select id="edit_candidate_grade" class="form-select" required>
+                                <select id="edit_candidate_grade" class="form-select" >
                                     <option value="" disabled selected>-- Select Grade --</option>
                                     <!-- Options will be dynamically added using JavaScript -->
                                 </select>
@@ -891,7 +891,7 @@
                                         id="edit_candidate_boiler_suit_size"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_boiler_suit_size">Boiler suit size</label>
                                 </div>
@@ -908,7 +908,7 @@
                                         id="edit_candidate_safety_shoe_size"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_safety_shoe_size">Safety Shoe Size</label>
                                 </div>
@@ -922,7 +922,7 @@
                                         id="edit_candidate_height"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_height">Height(cm)</label>
                                 </div>
@@ -939,7 +939,7 @@
                                         id="edit_candidate_weight"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_weight">Weight (KGS)</label>
                                 </div>
@@ -947,7 +947,7 @@
     
                             <div class="col-md-6">
                               <div class="form-floating">
-                                  <select id="edit_candidate_I_country" class="form-select" required>
+                                  <select id="edit_candidate_I_country" class="form-select" >
                                       <option value="" disabled selected>-- Select License Country --</option>
                                       <!-- Options will be dynamically added using JavaScript -->
                                   </select>
@@ -967,7 +967,7 @@
                                         id="edit_candidate_indos_number"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_indos_number">INDOS Number</label>
                                 </div>
@@ -979,7 +979,7 @@
                                         class="form-select"
                                         id="edit_candidate_company_status"
                                         aria-describedby="candidateStatusHelp"
-                                        required
+                                        
                                     >
                                         <option value="" disabled selected>Select Candidate Status</option>
                                         <option value="active">Active</option>
@@ -995,7 +995,7 @@
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-floating">
-                                <select id="edit_candidate_group" class="form-select" required>
+                                <select id="edit_candidate_group" class="form-select" >
                                     <option value="" disabled selected>-- Select Group --</option>
                                     <option value="Officer">Officer</option>
                                     <option value="Rating">Rating</option>
@@ -1014,7 +1014,7 @@
                                         id="edit_candidate_vendor"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_vendor">Vendor</label>
                                 </div>
@@ -1031,7 +1031,7 @@
                                         id="edit_candidate_photos"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_photos">Photo</label>
                                 </div>
@@ -1045,7 +1045,7 @@
                                         id="edit_candidate_resume"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_resume">Resume</label>
                                 </div>
@@ -1062,7 +1062,7 @@
                                         id="edit_candidate_c_ad1"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_c_ad1">Address</label>
                                 </div>
@@ -1076,7 +1076,7 @@
                                         id="edit_candidate_c_ad2"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_c_ad2">Address</label>
                                 </div>
@@ -1093,7 +1093,7 @@
                                         id="edit_candidate_city"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_city">City</label>
                                 </div>
@@ -1107,7 +1107,7 @@
                                         id="edit_candidate_c_state"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_c_state">State</label>
                                 </div>
@@ -1124,7 +1124,7 @@
                                         id="edit_candidate_p_city"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_p_city">City</label>
                                 </div>
@@ -1138,7 +1138,7 @@
                                         id="edit_candidate_p_state"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_p_state">State</label>
                                 </div>
@@ -1155,7 +1155,7 @@
                                         id="edit_candidate_pin"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_pin">Pincode</label>
                                 </div>
@@ -1169,7 +1169,7 @@
                                         id="edit_candidate_p_pin"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_p_pin">Pincode</label>
                                 </div>
@@ -1186,7 +1186,7 @@
                                         id="edit_candidate_c_mobi1"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_c_mobi1">Mobile</label>
                                 </div>
@@ -1200,7 +1200,7 @@
                                         id="edit_candidate_c_mobi2"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_c_mobi2">Mobile</label>
                                 </div>
@@ -1250,7 +1250,7 @@
                                         id="edit_candidate_email1"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_1_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_email1">Email</label>
                                 </div>
@@ -1264,7 +1264,7 @@
                                         id="edit_candidate_email2"
                                         placeholder="Field X"
                                         aria-describedby="fieldX_2_Help"
-                                        required
+                                        
                                     />
                                     <label for="edit_candidate_email2">Email</label>
                                 </div>
