--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -767,32 +767,12 @@
                 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
                 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
               
-                <script>
+                <!-- <script>
                   // JavaScript logic for fetching and updating counts
                   document.addEventListener('DOMContentLoaded', async function () {
-                    const token = localStorage.getItem('token');
-              
-                    // Fetch discussion counts
-                    const discussionCountsResponse = await fetch('https://nemonode.ivistaz.co/candidate/discussion-count', {
-                      headers: { "Authorization": token }
-                    });
-                    const discussionCountsData = await discussionCountsResponse.json();
-                    document.getElementById('proposedCount').innerText = discussionCountsData.proposedCount;
-                    document.getElementById('approvedCount').innerText = discussionCountsData.approvedCount;
-
-                    document.getElementById('joinedCount').innerText = discussionCountsData.joinedCount;
-
-              
-                    // Fetch call count
-                    const callCountResponse = await fetch('https://nemonode.ivistaz.co/candidate/call-count', {
-                      headers: { "Authorization": token }
-                    });
-                    const callCountData = await callCountResponse.json();
-                    document.getElementById('callCount').innerText = callCountData.call_count;
-                    document.getElementById('callCount').className= '  btn-primary badge'
-
+                   
                   });
-                </script>
+                </script> -->
          <!--/ Layout Demo -->
             </div>
            
